Fix for bug #12825: {css-moz} overflow: -moz-scrollbars-* not implemented Added code to implement the new overflow -moz-scrollbars values. r=evaughan@netscape.com